WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43372
[wx] Crash during HitTest call
https://bugs.webkit.org/show_bug.cgi?id=43372
Summary
[wx] Crash during HitTest call
Malcolm MacLeod
Reported
2010-08-02 13:20:34 PDT
Calling HitTest on a wxWebView results in a crash due to a) destruction of an uninitialized variable and b) (after a is fixed) deletion of a variable that has already been freed, presumably due to some kind of smart pointer. This patch fixes both of these issues so that HitTest can be used ina functional manner again.
Attachments
Patch to fix initialisation crash
(1.09 KB, text/plain)
2010-08-02 13:31 PDT
,
Malcolm MacLeod
kevino
: review+
kevino
: commit-queue-
Details
View All
Add attachment
proposed patch, testcase, etc.
Malcolm MacLeod
Comment 1
2010-08-02 13:31:08 PDT
Created
attachment 63249
[details]
Patch to fix initialisation crash
Alexey Proskuryakov
Comment 2
2010-08-03 07:34:32 PDT
Comment on
attachment 63249
[details]
Patch to fix initialisation crash Would you be willing to submit a patch for review, as described in <
http://webkit.org/coding/contributing.html
>? Please don't comment out code - just delete it if it's wrong.
Kevin Ollivier
Comment 3
2010-08-03 11:44:58 PDT
Thanks! Landed in
r64568
. A couple remarks for future patches. One, there is a 'patch' checkbox which lets the system know the attachment is a patch, and setting ? on the review queue marks it as needing review. (It also actually initiates try-bots which attempt to compile the patch.) Also, typically patches are supposed to contain a ChangeLog entry, which can be auto-generated using WebKitTools/Scripts/prepare-ChangeLog. Typically patches missing a ChangeLog entry are supposed to be given a bad review and sent back for reworking, but as this was fixing a crash, I felt it was best to be expedient and land this ASAP, adding the ChangeLog entry myself.
Kevin Ollivier
Comment 4
2010-08-03 11:46:47 PDT
(In reply to
comment #3
)
> Thanks! Landed in
r64568
. > > A couple remarks for future patches. One, there is a 'patch' checkbox which lets the system know the attachment is a patch, and setting ? on the review queue marks it as needing review. (It also actually initiates try-bots which attempt to compile the patch.) > > Also, typically patches are supposed to contain a ChangeLog entry, which can be auto-generated using WebKitTools/Scripts/prepare-ChangeLog. Typically patches missing a ChangeLog entry are supposed to be given a bad review and sent back for reworking, but as this was fixing a crash, I felt it was best to be expedient and land this ASAP, adding the ChangeLog entry myself.
Err, bad review is a poor choice of words. :) I mean an r-, which means it isn't ready to land.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug