Reviewed by Kevin Ollivier.

Fix crash during HitTest call.
https://bugs.webkit.org/show_bug.cgi?id=43372


Canonical link: https://commits.webkit.org/55390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64568 268f45cc-cd09-0410-ab3c-d52691b4dbfc